Fix filename spacing

--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
 }
 
 .file .name {
-  width: 80px;
+  width:     100%;
   word-wrap: break-word;
 }
 
